0.37    2009 juliol 5
        - Add tests and example using solve method
        - Add Solve Role with solve method
        - Fix benchmark script broken during Moose refactor.

0.36    2009 juliol 3
        - 1st Refactoring pass using Moose

0.26    2009 juny 30
        - More Documentation.
        
0.25    2009 juny 29
        - Improve documentation - mention solve_LP() found in test.
        - Remove SimplexView.pm since it doesn't pertain to the model.
        - Simplify Makefile.PL - remove dependencies for view.

0.24    2009 juny 28
        - Initial CPAN Release